kubernetes/stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pdf-orientation-correction-service-stateful
  namespace: or-corr
  labels:
    app: pdf-orientation-correction-service
spec:
  serviceName: pdf-orientation-correction-service 
  replicas: 1 
  selector:
    matchLabels:
      app: pdf-orientation-correction-service 
  template:
    metadata:
      labels:
        app: pdf-orientation-correction-service 
    spec:
      containers:
        - name: pdf-orientation-correction-service
          image: ghcr.io/scanneddocumentsprocessing/pdf_orientation_correction:latest  # Docker image from GHCR
          imagePullPolicy: Always
          ports:
            - containerPort: 80 
      imagePullSecrets:
        - name: ghcr-secret
