kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pdf-orientation-correction-service
  namespace: or-corr 
spec:
  selector:
    app: pdf-orientation-correction-service 
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80  
  type: LoadBalancer
