kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-orientation-correction-service-ingress
  namespace: or-corr
  annotations:
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  ingressClassName: nginx
  rules:
    - host: my-orientation-correction.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdf-orientation-correction-service 
                port:
                  number: 80
  tls:
    - hosts:
        - my-orientation-correction.example.com 
      secretName: pdf-orientation-correction-service-tls-cert
